--- a/src/main/java/vista/VistaPedidos.form
+++ b/src/main/java/vista/VistaPedidos.form
@@ -2,7 +2,7 @@
 
 <Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
-    <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="defaultCloseOperation" type="int" value="2"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -276,6 +276,7 @@
         <Component class="javax.swing.JButton" name="jBtnRegistrar">
           <Properties>
             <Property name="text" type="java.lang.String" value="Registrar Pedido"/>
+            <Property name="enabled" type="boolean" value="false"/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
@@ -313,7 +314,7 @@
         <Component class="javax.swing.JFormattedTextField" name="jTxtFecha">
           <Properties>
             <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
-              <Format format="yyyy-M-d" subtype="-1" type="1"/>
+              <Format format="yyyy-mM-d" subtype="-1" type="1"/>
             </Property>
           </Properties>
           <AuxValues>
