--- a/src/main/java/vista/VistaPedidos.form
+++ b/src/main/java/vista/VistaPedidos.form
@@ -314,7 +314,7 @@
         <Component class="javax.swing.JFormattedTextField" name="jTxtFecha">
           <Properties>
             <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
-              <Format format="yyyy-mM-d" subtype="-1" type="1"/>
+              <Format format="yyyy-MM-d" subtype="-1" type="1"/>
             </Property>
           </Properties>
           <AuxValues>
